; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_keys.c_Key_Unbind_f.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_cl_keys.c_Key_Unbind_f.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [43 x i8] c"unbind <key> : remove commands from a key\0A\00", align 1
@.str.1 = private unnamed_addr constant [24 x i8] c"\22%s\22 isn't a valid key\0A\00", align 1
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Key_Unbind_f() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 (...) @Cmd_Argc()
  %3 = icmp ne i32 %2, 2
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 (i8*, ...) @Com_Printf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0))
  br label %17

6:                                                ; preds = %0
  %7 = call i32 @Cmd_Argv(i32 1)
  %8 = call i32 @Key_StringToKeynum(i32 %7)
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %14

11:                                               ; preds = %6
  %12 = call i32 @Cmd_Argv(i32 1)
  %13 = call i32 (i8*, ...) @Com_Printf(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.1, i64 0, i64 0), i32 %12)
  br label %17

14:                                               ; preds = %6
  %15 = load i32, i32* %1, align 4
  %16 = call i32 @Key_SetBinding(i32 %15, i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  br label %17

17:                                               ; preds = %14, %11, %4
  ret void
}

declare dso_local i32 @Cmd_Argc(...) #1

declare dso_local i32 @Com_Printf(i8*, ...) #1

declare dso_local i32 @Key_StringToKeynum(i32) #1

declare dso_local i32 @Cmd_Argv(i32) #1

declare dso_local i32 @Key_SetBinding(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
